0.0.21a0
======

* Added a method to get the latest S3 object in a bucket given a prefix
* Changed the build method from setup.py to pypa - python3 -m build

0.0.20
======

* Added the ability to specify ports and protocol for generated hostname based IpPermissions rules
* Added methods to clean up and delete S3 buckets, organized and refactored S3Util to utilize newer module methods
* Redacted ReST API token from DEBUG logging
* Added methods to set S3 bucket lifecycle rules, including a method to set lifecycle deletion rules
* Added sample scripts for import assets from a directory and setting project asset visibilities
* Added a method to get the first listed nameserver on Linux
* Added snapshot info including snapshot storage to the team run report

0.0.19
======

* Added a method to create an identity for a storage bucket and added a sample script
* Added a method to automatically create AWS config and credentials file from an identity
* Added methods and CLI commands to list team members and list team members by team manager

0.0.18
======

* Added CLI commands to create, restore, and delete snapshots across one or more teams:
  * cons3rt team run snapshot create --id=123
  * cons3rt team run snapshot restore --id=123
  * cons3rt team run snapshot delete --id=123
* Added a --skip arg to provide a list of deployment run IDs to skip
  * cons3rt team run snapshot create --id=3 --skip 12345
* Added a CLI command to list runs in a team:
  * cons3rt team run list --id=1
* Added project CLI commands for snapshots that behave like the team ones, allow you to manage snapshots across one or more projects:
  * cons3rt project run snapshot create --id=123
  * cons3rt project run snapshot restore --id=123
  * cons3rt project run snapshot delete --id=123
* Updated the error handling for parsing http responses
* Updated the error messages reported in host action results

0.0.17
======

* Added the "cons3rt run cancel" and "cons3rt run release" CLI commands