@@ -3,6 +3,7 @@
 
 * Added a method to get the latest S3 object in a bucket given a prefix
 * Changed the build method from setup.py to pypa - python3 -m build
+* Added method list_deployment_runs for listing runs in the user context
 
 0.0.20
 ======
